syntax = "proto3";

package api.cart.v1;

import "google/api/annotations.proto";

option go_package = "imperialPalaceMall/api/cart/v1;v1";
option java_multiple_files = true;
option java_package = "api.cart.v1";

service CartService {
  rpc AddCart (AddCartRequest) returns (AddCartReply) {
    option (google.api.http) = {
      put: "/v1/user/my/cart"
      body: "*"
    };
  };
}

message AddCartRequest {
  int64 user_id = 1;
  int64 goods_id = 2;
  int64 goods_sku = 3;
}

message Cart {
  int64 id = 1;
  int64 user_id = 2;
  int64 goods_id = 3;
  int64 goods_sku = 4;
  int32 num = 5;
}

message AddCartReply {
  Cart cart = 1;
}